--- a/PotatoLib.vcxproj
+++ b/PotatoLib.vcxproj
@@ -161,6 +161,9 @@
   <ItemGroup>
     <ClCompile Include="PotatoLib.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Source\Utility\Singleton.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
