ログ出力クラス(仮)追加

--- a/PotatoLib.vcxproj
+++ b/PotatoLib.vcxproj
@@ -160,8 +160,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="PotatoLib.cpp" />
+    <ClCompile Include="Source\Utility\PotatoLog.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Utility\PotatoLog.h" />
     <ClInclude Include="Source\Utility\Singleton.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
