--- a/PotatoLib.vcxproj.filters
+++ b/PotatoLib.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="Source\Utility\PotatoLog.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Framework\Window.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
