--- a/PotatoLib.vcxproj
+++ b/PotatoLib.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="PotatoLib.cpp" />
     <ClCompile Include="Source\Framework\GameApplication.cpp" />
     <ClCompile Include="Source\Render\Shader\ProgramObject.cpp" />
+    <ClCompile Include="Source\Render\Shader\ShaderObject.cpp" />
     <ClCompile Include="Source\Utility\Assert.cpp" />
     <ClCompile Include="Source\Utility\Log.cpp" />
   </ItemGroup>
@@ -170,6 +171,7 @@
     <ClInclude Include="Source\Framework\Type.h" />
     <ClInclude Include="Source\Framework\Window.h" />
     <ClInclude Include="Source\Render\Shader\ProgramObject.h" />
+    <ClInclude Include="Source\Render\Shader\ShaderObject.h" />
     <ClInclude Include="Source\Utility\Assert.h" />
     <ClInclude Include="Source\Utility\Log.h" />
     <ClInclude Include="Source\Utility\Singleton.h" />
