--- a/PotatoLib.vcxproj
+++ b/PotatoLib.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="Source\Render\Buffer\BufferObject.cpp" />
     <ClCompile Include="Source\Render\Buffer\ElementArrayObject.cpp" />
     <ClCompile Include="Source\Render\Buffer\VertexArrayObject.cpp" />
+    <ClCompile Include="Source\Render\PolygonRender.cpp" />
     <ClCompile Include="Source\Render\Shader\ProgramObject.cpp" />
     <ClCompile Include="Source\Render\Shader\ShaderObject.cpp" />
     <ClCompile Include="Source\Utility\Assert.cpp" />
@@ -176,6 +177,7 @@
     <ClInclude Include="Source\Render\Buffer\BufferObject.h" />
     <ClInclude Include="Source\Render\Buffer\ElementArrayObject.h" />
     <ClInclude Include="Source\Render\Buffer\VertexArrayObject.h" />
+    <ClInclude Include="Source\Render\PolygonRender.h" />
     <ClInclude Include="Source\Render\Shader\ProgramObject.h" />
     <ClInclude Include="Source\Render\Shader\ShaderObject.h" />
     <ClInclude Include="Source\Utility\Assert.h" />
