--- a/Project/Projects/PotatoLIbx64Debug.props
+++ b/Project/Projects/PotatoLIbx64Debug.props
@@ -2,11 +2,13 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup>
+    <LibraryPath>$(GLFWDir)\x64_debug;$(GLEWDir)\x64_release;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup>
-    <ClCompile>
-      <AdditionalIncludeDirectories>.\..\Libraries\glfw\inc;.\..\Libraries\glew\inc;.\..\Libraries\glm\inc;$(SolutionDir)PotatoLib\Source;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-    </ClCompile>
+    <Link>
+      <AdditionalDependencies>PotatoLib_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemGroup />
 </Project>
