既存の型定義を専用のフォルダへ移動

--- a/Project/Projects/PotatoLib/PotatoLib.vcxproj
+++ b/Project/Projects/PotatoLib/PotatoLib.vcxproj
@@ -190,7 +190,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Framework\GameApplication.h" />
-    <ClInclude Include="Source\Framework\Type.h" />
+    <ClInclude Include="Source\Type\Type.h" />
     <ClInclude Include="Source\Framework\Window.h" />
     <ClInclude Include="Source\Render\Buffer\BufferObject.h" />
     <ClInclude Include="Source\Render\Buffer\ElementArrayObject.h" />
