--- a/Project/Projects/PotatoLib/PotatoLib.vcxproj
+++ b/Project/Projects/PotatoLib/PotatoLib.vcxproj
@@ -185,6 +185,7 @@
     <ClCompile Include="Source\Render\PolygonRender.cpp" />
     <ClCompile Include="Source\Render\Shader\ProgramObject.cpp" />
     <ClCompile Include="Source\Render\Shader\ShaderObject.cpp" />
+    <ClCompile Include="Source\Type\Vector2.cpp" />
     <ClCompile Include="Source\Utility\Assert.cpp" />
     <ClCompile Include="Source\Utility\Log.cpp" />
   </ItemGroup>
@@ -198,6 +199,7 @@
     <ClInclude Include="Source\Render\PolygonRender.h" />
     <ClInclude Include="Source\Render\Shader\ProgramObject.h" />
     <ClInclude Include="Source\Render\Shader\ShaderObject.h" />
+    <ClInclude Include="Source\Type\Vector2.h" />
     <ClInclude Include="Source\Utility\Assert.h" />
     <ClInclude Include="Source\Utility\Log.h" />
     <ClInclude Include="Source\Utility\Singleton.h" />
