--- a/Project/Projects/LibraryTest/LibraryTest.vcxproj
+++ b/Project/Projects/LibraryTest/LibraryTest.vcxproj
@@ -59,6 +59,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TestVector2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PotatoLib\PotatoLib.vcxproj">
