--- a/Project/Projects/PotatoLib/PotatoLib.vcxproj.filters
+++ b/Project/Projects/PotatoLib/PotatoLib.vcxproj.filters
@@ -95,6 +95,9 @@
     <ClInclude Include="Source\Utility\Math.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Utility\ForwardDeclarationMacro.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
     <ClInclude Include="Source\Utility\Converter.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
