--- a/Project/Projects/PotatoLib/PotatoLib.vcxproj
+++ b/Project/Projects/PotatoLib/PotatoLib.vcxproj
@@ -190,6 +190,7 @@
     <ClCompile Include="Source\Type\Vector2.cpp" />
     <ClCompile Include="Source\Utility\Assert.cpp" />
     <ClCompile Include="Source\Utility\Log.cpp" />
+    <ClCompile Include="Source\Utility\PathUtility.cpp" />
     <ClCompile Include="Source\Utility\StringUtility.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -207,6 +208,7 @@
     <ClInclude Include="Source\Type\Vector2.h" />
     <ClInclude Include="Source\Utility\Assert.h" />
     <ClInclude Include="Source\Utility\Log.h" />
+    <ClInclude Include="Source\Utility\PathUtility.h" />
     <ClInclude Include="Source\Utility\Singleton.h" />
   </ItemGroup>
   <ItemGroup>
