--- a/Project/Projects/PotatoLib/PotatoLib.vcxproj.filters
+++ b/Project/Projects/PotatoLib/PotatoLib.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="Source\Utility\StringUtility.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Utility\PathUtility.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Utility\Singleton.h">
@@ -109,6 +112,9 @@
     <None Include="GLSL\PolygonRender.vert" />
     <None Include="GLSL\PolygonRender.frag" />
     <ClInclude Include="Source\Utility\StringUtility.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Utility\PathUtility.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
