--- a/Project/Projects/.editorconfig
+++ b/Project/Projects/.editorconfig
@@ -1,5 +1,4 @@
-# Visual Studio で、C++ の設定で .editorconfig ファイルが生成されました。
-
+﻿
 [*.{c++,cc,cpp,cppm,cxx,h,h++,hh,hpp,hxx,inl,ipp,ixx,tlh,tli}]
 
 # Visual C++ コード スタイルの設定
@@ -29,8 +28,8 @@ cpp_new_line_before_open_brace_lambda = same_line
 cpp_new_line_scope_braces_on_separate_lines = true
 cpp_new_line_close_brace_same_line_empty_type = false
 cpp_new_line_close_brace_same_line_empty_function = false
-cpp_new_line_before_catch = true
-cpp_new_line_before_else = true
+cpp_new_line_before_catch = false
+cpp_new_line_before_else = false
 cpp_new_line_before_while_in_do_while = false
 cpp_space_before_function_open_parenthesis = remove
 cpp_space_within_parameter_list_parentheses = false
